[package]
name = "sertus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
home = "0.5.4"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
config = { git="https://github.com/wisarmy/config-rs.git" }
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
axum = "0.6.11"

[features]
default=["async_config"]
async_config=[]
